# ChronicalWeaver

./: .gitignore  CLAUDE_PLAN.md  GPT_PLAN.md  GPT_PLAN_0.md  GPT_PLAN_1.md  GPT_PLAN_2.md  PROJECT.md  README.md  acceptance_testing.md  main.py  pyproject.toml
.github/workflows/: ci.yml
CLAUDE/: AGENT_UI_SPEC.md  CLAUDE_PLAN_0.md  CLAUDE_PLAN_2.md  CLAUDE_PLAN_5.md  UI_FEEDBACK_TEMPLATE.md  UI_REQUIREMENTS.md
GPT/: GPT_PLAN_3.md  GPT_PLAN_5.md
agents/: __init__.py  base_agent.py  main_agent.py
chronicle_weaver/: __init__.py
config/: config_manager.py  host_config.json  llm_configs.json  user_settings.json
docs/: CLAUDE_PLAN.md  CLAUDE_PLAN_0.md  CLAUDE_PLAN_1.md  CLAUDE_PLAN_2.md  CLAUDE_PLAN_3.md  CLAUDE_PLAN_4.md  CLAUDE_PLAN_5.md  GPT_PLAN_4.md  UI_COLLABORATION_GUIDE.md  architecture.md  dev_setup.md
images/: __init__.py
llm/: __init__.py  host_connection.py  llm_config.py  llm_manager.py
memory/: __init__.py  conversation_memory.py  database_manager.py  memory_manager.py  models.py  persistent_memory.py  summarization.py
tests/: __init__.py  lmstudio_sample.py  ollama_sample.py  test_basic.py  test_ui_main.py
tests/integration/memory/: test_memory_integration.py  test_migrations.py  test_query_and_performance.py
tests/unit/llm/: test_llm_connection.py
tests/unit/memory/: test_models.py
ui/: __init__.py  logging_tab.py  main_window.py  roleplay_tab.py  settings_tab.py
