[tool.poetry]
name = "chronicle-weaver"
version = "0.1.0"
description = "AI-driven roleplaying assistant for Windows 11"
authors = ["Chronicle Weaver Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "chronicle_weaver"}]

[tool.poetry.dependencies]
python = "^3.13"
PyQt6 = "^6.7.0"
langchain = "^0.3.0"
litellm = "^1.50.0"
requests = "^2.32.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-qt = "^4.4.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
